"fix: использовать коллекцию LinkedList для хранения историй просмотров.Использовать метод removeFirst  в методе add."