@@ -2,21 +2,21 @@ package manager;
 
 import task.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> historys = new ArrayList<>();
+    private final LinkedList<Task> historys = new LinkedList<>();
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(historys);
+        return new LinkedList<>(historys);
     }
 
     @Override
     public void add(Task task) {
         if (historys.size() == 10) {
-            historys.remove(0);
+            historys.removeFirst();
         }
         historys.add(task);
     }
